Readability issue

--- a/Themes/Vertex/style.css
+++ b/Themes/Vertex/style.css
@@ -22,25 +22,61 @@
 
 /* Fix for buttons and toolboxes */
 
-QAbstractButton { padding: 0  16 0 16; border-radius: 8px; }
-/*QToolBox { color: #414244; background-color: #EFEFF1; }*/
-
+QAbstractButton { 
+      padding: 0  16 0 16; border-radius: 8px; 
+}
 
 /* Various Applets &  fixes IMPORTANT! */
 
-.BE--GMenu QMenuBar {  padding: 0 0 0 -8; spacing: 15; }
-.BE--SysTray { margin:  2 0 1 0; padding: 1 12 4 0; }
-.BE--Session { margin: 2 4 2 0; padding:0 0 0 0;  font-weight: bold; }
-.BE--Volume { padding: 2 4 0 0; margin: 0px; max-width:22px; max-height: 16px;}
-.BE--InfoCenter { padding: -2 1 -2 0; }
-.BE--MediaTray { margin: 0 8 0 4; padding: 0 0 0 0; }
-.BE--Device { max-width: 22px; max-height: 16px; spacing: -7; padding: 2 2 0 2; }
-.BE--GMenu QMenuBar, .BE--Clock, .BE--Session { font: 10pt Cantarell; }
-.BE--Run QSizeGrip, *:menu-indicator { image:none; }
+.BE--GMenu QMenuBar {  
+      padding: 0 0 0 -8; 
+      spacing: 15; 
+}
+
+.BE--SysTray { 
+      margin:  2 0 1 0; 
+      padding: 1 12 4 0; 
+}
+
+.BE--Session { 
+      margin: 2 4 2 0; 
+      padding:0 0 0 0;  
+      font-weight: bold; 
+}
+
+.BE--Volume { 
+      padding: 2 4 0 0; 
+      margin: 0px; 
+      max-width:22px; 
+      max-height: 16px;
+}
+
+.BE--InfoCenter { 
+      padding: -2 1 -2 0; 
+}
+
+.BE--MediaTray { 
+      margin: 0 8 0 4; 
+      padding: 0 0 0 0; 
+}
+
+.BE--Device { 
+      max-width: 22px; 
+      max-height: 16px; spacing: -7; 
+      padding: 2 2 0 2; 
+}
+
+.BE--GMenu QMenuBar, .BE--Clock, .BE--Session { 
+      font: 10pt Cantarell; 
+}
+
+.BE--Run QSizeGrip, *:menu-indicator { 
+      image:none; 
+}
+
 .BE--GMenu QMenuBar, .BE--Clock, .BE--Session, #infocenter  {
       color:  #F2F2F4; 
 }
-
 
 .BE--Battery {
       margin: 1 0 1 0;
